--- a/Desserts.html
+++ b/Desserts.html
@@ -17,9 +17,15 @@
 </div>
 		<p>Here are some of my favorite desserts</p>
 <br>
-		<h3>List</h3>
+		<h3>Desserts List:</h3>
+		<p>Ice cream</p>
+		<p>Boba</p>
+		<p>Cookies</p>
+		<p>Frozen yogurt</p>
+		<p>Gelato</p>
 		<p>Cupcakes</p>
-		<p>ice cream</p>
+		<p>Macarons</p>
+		<p>Donuts</p>
 		<br>
 		<img src="cupcakes.jpg" alt="cupcakes" />
 	</body>
@@ -29,27 +35,3 @@
 		<link href="style.css" type="text/css" rel="stylesheet" />
 	</head>
 
-<head>
-	<title>Kaitlyn's Webiste</title>
-
-</head>
-<body>
-	<h1>Kaitlyn's Dessert Reccomendations</h1>
-	<p>Welcome to Kaitlyn's Dessert Reccomendations</p>
-
-<img src="cupcakes.jpg" alt="cupakes"/>
-
-<a href="index.html">home</a>
-
-<p>Here are some of my favorite desserts</p>
-<ul>
-	<li>boba</li>
-	<li>ice cream</li>
-	<li>cupcakes</li>
-	<ul>
-
-
-	</ul>
-
-</body>
-</html>
