--- a/Restaurants.html
+++ b/Restaurants.html
@@ -52,6 +52,10 @@
 		<td>10/10</td>
 	</tr>
 
+	<tr>
+		<td>Over the Moon</td>
+		<td>9.8/10</td>
+	</tr>
 
 	<tr>
 		<td>Marugame Udon</td>
@@ -60,7 +64,7 @@
 
 	<tr>
 		<td>Dumpling Union</td>
-		<td>9.5/10</td>
+		<td>9.7/10</td>
 	</tr>
 
 	<tr>
