--- a/MealFoods.html
+++ b/MealFoods.html
@@ -18,6 +18,17 @@
 		</div>
 	<h1>Kaitlyn's Food Reccomendations</h1>
 	<p>Welcome to Kaitlyn's Food Reccomendations</p>
+<br>
+		<h3>Foods List:</h3>
+		<p>Dumplings</p>
+		<p>Ramen</p>
+		<p>Udon</p>
+		<p>Pasta</p>
+		<p>Pizza</p>
+		<p>Chicken</p>
+		<p>Sushi</p>
+		<p>Salad</p>
+		<br>
 
 <img src="ramen_sushi.jpg" alt="ramen_sushi"/>
 
