--- a/Restaurants.html
+++ b/Restaurants.html
@@ -17,7 +17,7 @@
 		  <a href="MealFoods.html">Foods</a>
 		</div>
 	<h1>Kaitlyn's Restaurant Reccomendations</h1>
-	<p>Welcome to Kaitlyn's Restaurant Reccomendations</p>
+	<p>Here are some of my restaurant reccomendations</p>
 
 <img src="restaurant.jpg" alt="restaurant"/>
 
@@ -68,6 +68,9 @@
 	</tr>
 
 	<tr>
+		<td>Proposition Chicken</td>
+		<td>9.5/10</td>
+	<tr>
 		<td>Cafe Maiko</td>
 		<td>9.5/10</td>
 	</tr>
@@ -83,8 +86,11 @@
 	</tr>
 
 	<tr>
-		<td>Salt&Straw</td>
+		<td>Mochi Donuts</td>
 		<td>9/10</td>
+	<tr>
+		<td>Salt&Straw</td>
+		<td>8.7/10</td>
 	</tr>
 
 </table>
