--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<li><a href="Desserts.html">Desserts</a></li>
 	<li><a href="Restaurants.html">Restaurants</a></li>
 	<ul>
-
+<img src="pinkfood.png" alt="pinkfood" />
 
 	</ul>
 
